# peridot-sprite-atlas-visualizer

./: .gitignore  Cargo.toml  build.rs  exe.rc  howto.md  packages.config  peridot-sprite-atlas-visualizer.exe.manifest
resources/atlas_bg/: psh.hlsl  vsh.hlsl
resources/grid/: psh.hlsl  psh_tex.hlsl  vsh.hlsl  vsh_plane.hlsl
resources/sprite_instance/: psh.hlsl  vsh.hlsl
src/: app_state.rs  bg_worker.rs  color_factory.rs  composition_element_builder.rs  coordinate.rs  effect_builder.rs  extra_bindings.rs  hittest.rs  input.rs  main.rs  native_wrapper.rs  peridot.rs  subsystem.rs  surface_helper.rs  timespan_helper.rs
src/component/: app_header.rs  dnd_overlay.rs  mod.rs
src/source_reader/: png.rs
