[package]
name = "peridot-sprite-atlas-visualizer"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
bitflags = "2.8.0"
windows-core = "*"
windows-numerics = "*"
windows-collections = "*"
tracing-subscriber = { version = "0.3", features = ["registry"] }
tracing = "0.1"
walkdir = "2"

[dependencies.windows]
version = "0.60"
features = [
    "Win32_Storage_Packaging_Appx",
    "Win32_Graphics_CompositionSwapchain",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_DirectWrite",
    "Win32_Graphics_Dwm",
    "Win32_UI_Controls",
    "Win32_UI_HiDpi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Ole",
    "Win32_System_Memory",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_SystemServices",
    "System",
    "Graphics_Effects",
    "Graphics_DirectX",
    "UI",
    "UI_Composition",
    "UI_Composition_Desktop",
    "Win32_System_WinRT",
    "Win32_System_WinRT_Composition",
]

[build-dependencies]
windows-bindgen = "*"

[build-dependencies.windows]
version = "0.60"
features = ["Win32_System_Registry"]
